--- a/src/components/Calendar/Calendar.css
+++ b/src/components/Calendar/Calendar.css
@@ -14,12 +14,12 @@
 }
 
 
-.calenderHeader {
+.calendarHeader {
   display: flex;
   justify-content: space-around;
 }
 
-.calenderBody {
+.calendarBody {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
 }
@@ -30,7 +30,16 @@
   justify-content: space-between;
 }
 
-.calenderGridBox {
+.calendarCell {
   border: 1px solid grey;
 }
+
+.calendarCellCurrentDay {
+ background-color: cadetblue;
+}
+
+.calendarCellSelected {
+  border: 2px solid blue
+ }
+
 
